[package]
name = "xphysics"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
slab = "0.4.2"
xmath = { path = "../xmath" }
bitflags = "1.2.1"

[dev-dependencies]
nvg = "0.5.3"
nvg-gl = "0.5.0"
gl = "0.14.0"
glutin = "0.22.0-alpha4"
rand = "0.7.2"
xfixedpoint = { path = "../xfixedpoint" }
